--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="assets/favicon.png" type="image/png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="icon" href="assets/favicon.png" type="image/png" />
     <title>Alivio</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header" aria-label="header">
-        <div class="container">
-            <div class="header__wrapper">
-                <svg class="logo" aria-label="logo">
-                    <use href="assets/sprites.svg#logo-icon"></use>
-                </svg>
+      <div class="container">
+        <div class="header__wrapper">
+          <svg class="logo" aria-label="logo">
+            <use href="assets/sprites.svg#logo-icon"></use>
+          </svg>
 
-                <nav class="header__nav" aria-label="navigation">
-                    <ul class="header__nav-list" aria-label="navigation list">
-                        <li class="header__nav-item">
-                            <a href="#about-id" class="header__nav-link">Why Alivio</a>
-                        </li>
-                        <li class="header__nav-item">
-                            <a href="#success-id" class="header__nav-link">Solutions</a>
-                        </li>
-                        <li class="header__nav-item">
-                            <a href="#product-id" class="header__nav-link">Community</a>
-                        </li>
-                        <li class="header__nav-item">
-                            <a href="#pricing-id" class="header__nav-link">Pricing</a>
-                        </li>
-                    </ul>
-                </nav>
+          <nav class="header__nav" aria-label="navigation">
+            <ul class="header__nav-list" aria-label="navigation list">
+              <li class="header__nav-item">
+                <a href="#about-id" class="header__nav-link">Why Alivio</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#success-id" class="header__nav-link">Solutions</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#product-id" class="header__nav-link">Community</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#pricing-id" class="header__nav-link">Pricing</a>
+              </li>
+            </ul>
+          </nav>
 
-                <div class="header__actions">
-                    <button type="button" class="btn btn--signin">Sign In</button>
-                    <button type="button" class="btn">Start Trial</button>
-                </div>
-            </div>
+          <div class="header__actions">
+            <button type="button" class="btn btn--signin">Sign In</button>
+            <button type="button" class="btn">Start Trial</button>
+          </div>
         </div>
+      </div>
     </header>
 
-    <div class="mobile-navigation" aria-label="mobile navigation">
+    <!-- <div class="mobile-navigation" aria-label="mobile navigation">
         <label for="menu-toggler-id" aria-label="open-close mobile navigation menu">
             <svg class="mobile-navigation__burger" aria-label="burger icon">
                 <use href="assets/sprites.svg#burger-icon"></use>
@@ -76,9 +78,9 @@
                 </svg>
             </label>
         </nav>
-    </div>
+    </div> -->
 
-    <main>
+    <!-- <main>
         <section class="hero" aria-label="hero section" id="hero-id">
             <div class="container">
                 <div class="hero__content">
@@ -181,32 +183,31 @@
                 </div>
             </div>
         </section>
-    </main>
+    </main> -->
 
-    <footer class="pricing" aria-label="pricing section" id="pricing-id">
-        <div class="container">
-            <div class="pricing__content">
-                <h2 class="pricing__title">Alivio</h2>
+    <!-- <footer class="pricing" aria-label="pricing section" id="pricing-id">
+      <div class="container">
+        <div class="pricing__content">
+          <h2 class="pricing__title">Alivio</h2>
 
-                <nav class="pricing__nav" aria-label="navigation">
-                    <ul class="pricing__nav-list" aria-label="navigation list">
-                        <li class="pricing__nav-item">
-                            <a href="#about-id" class="pricing__nav-link">Why Alivio</a>
-                        </li>
-                        <li class="pricing__nav-item">
-                            <a href="#success-id" class="pricing__nav-link">Solutions</a>
-                        </li>
-                        <li class="pricing__nav-item">
-                            <a href="#product-id" class="pricing__nav-link">Community</a>
-                        </li>
-                        <li class="pricing__nav-item">
-                            <a href="#pricing-id" class="pricing__nav-link">Pricing</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+          <nav class="pricing__nav" aria-label="navigation">
+            <ul class="pricing__nav-list" aria-label="navigation list">
+              <li class="pricing__nav-item">
+                <a href="#about-id" class="pricing__nav-link">Why Alivio</a>
+              </li>
+              <li class="pricing__nav-item">
+                <a href="#success-id" class="pricing__nav-link">Solutions</a>
+              </li>
+              <li class="pricing__nav-item">
+                <a href="#product-id" class="pricing__nav-link">Community</a>
+              </li>
+              <li class="pricing__nav-item">
+                <a href="#pricing-id" class="pricing__nav-link">Pricing</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-    </footer>
-</body>
-
+      </div>
+    </footer> -->
+  </body>
 </html>
